# face-recognition

./: .gitignore  README.md  pyproject.toml
source/: detect_faces.py  face_match.py  find_faces.py  identify.py  identify_by_video.py  pull_faces.py
